Fixed the layout issues and made some changes to cart page behavior.

--- a/css/style.css
+++ b/css/style.css
@@ -7,6 +7,8 @@
 body {
     background-color: #fafafa;
 /*    margin: 10px;*/
+/*    max-height: 100%;*/
+/*    flex-grow: 1;*/
 }
 
 div#frame {
@@ -20,6 +22,15 @@ div#frame {
 img {
     display: block;
     max-width: 100%;
+}
+
+.page-content {
+    max-width: 900px;
+    margin: 0 auto;
+}
+
+md-content {
+    min-width: 100%;
 }
 
 /*
